deploy: b18ea6dea2c2829ec25c2ae5a3ed57932fcca6e0

--- a/_modules/python2verilog/backend/verilog/ast.html
+++ b/_modules/python2verilog/backend/verilog/ast.html
@@ -39,7 +39,7 @@
 <span class="kn">from</span> <span class="nn">typing</span> <span class="kn">import</span> <span class="n">Optional</span>
 
 <span class="kn">from</span> <span class="nn">...</span> <span class="kn">import</span> <span class="n">ir</span>
-<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_dict_type</span><span class="p">,</span> <span class="n">assert_list_type</span><span class="p">,</span> <span class="n">assert_type</span>
+<span class="kn">from</span> <span class="nn">...utils.assertions</span> <span class="kn">import</span> <span class="n">assert_typed_dict</span><span class="p">,</span> <span class="n">get_typed</span><span class="p">,</span> <span class="n">get_typed_list</span>
 <span class="kn">from</span> <span class="nn">...utils.string</span> <span class="kn">import</span> <span class="n">ImplementsToLines</span><span class="p">,</span> <span class="n">Indent</span><span class="p">,</span> <span class="n">Lines</span>
 
 
@@ -80,8 +80,8 @@
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">literal</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">comment</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span><span class="p">):</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">literal</span> <span class="o">=</span> <span class="n">assert_type</span><span class="p">(</span><span class="n">literal</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">comment</span> <span class="o">=</span> <span class="n">assert_type</span><span class="p">(</span><span class="n">comment</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">literal</span> <span class="o">=</span> <span class="n">get_typed</span><span class="p">(</span><span class="n">literal</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">comment</span> <span class="o">=</span> <span class="n">get_typed</span><span class="p">(</span><span class="n">comment</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Statement.to_lines">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.Statement.to_lines">[docs]</a>
@@ -234,6 +234,7 @@
             <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _start&quot;</span>
             <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _clock&quot;</span>
             <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _reset&quot;</span>
+            <span class="n">input_lines</span> <span class="o">+=</span> <span class="s2">&quot;input wire _wait&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">input</span> <span class="o">=</span> <span class="n">input_lines</span>
 
         <span class="n">output_lines</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
@@ -253,7 +254,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">body</span> <span class="o">=</span> <span class="p">[]</span>
 
         <span class="k">if</span> <span class="n">localparams</span><span class="p">:</span>
-            <span class="n">assert_dict_type</span><span class="p">(</span><span class="n">localparams</span><span class="p">,</span> <span class="nb">str</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">)</span>
+            <span class="n">assert_typed_dict</span><span class="p">(</span><span class="n">localparams</span><span class="p">,</span> <span class="nb">str</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">UInt</span><span class="p">)</span>  <span class="c1"># type: ignore[misc]</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">local_params</span> <span class="o">=</span> <span class="n">Lines</span><span class="p">()</span>
             <span class="k">for</span> <span class="n">key</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">localparams</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">local_params</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">LocalParam</span><span class="p">(</span><span class="n">key</span><span class="p">,</span> <span class="n">value</span><span class="p">)</span><span class="o">.</span><span class="n">to_lines</span><span class="p">())</span>
@@ -295,7 +296,7 @@
 
     <span class="k">def</span> <span class="fm">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="n">body</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="nb">list</span><span class="p">[</span><span class="n">Statement</span><span class="p">]]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
         <span class="k">if</span> <span class="n">body</span><span class="p">:</span>
-            <span class="n">assert_list_type</span><span class="p">(</span><span class="n">body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
+            <span class="n">get_typed_list</span><span class="p">(</span><span class="n">body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">body</span> <span class="o">=</span> <span class="n">body</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
@@ -417,9 +418,9 @@
 
 
 
-<div class="viewcode-block" id="BlockingSubsitution">
-<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.BlockingSubsitution">[docs]</a>
-<span class="k">class</span> <span class="nc">BlockingSubsitution</span><span class="p">(</span><span class="n">Subsitution</span><span class="p">):</span>
+<div class="viewcode-block" id="BlockingSub">
+<a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.BlockingSub">[docs]</a>
+<span class="k">class</span> <span class="nc">BlockingSub</span><span class="p">(</span><span class="n">Subsitution</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    &lt;lvalue&gt; = &lt;rvalue&gt;</span>
 <span class="sd">    &quot;&quot;&quot;</span>
@@ -441,13 +442,13 @@
         <span class="n">name</span><span class="p">:</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span> <span class="o">|</span> <span class="nb">str</span><span class="p">,</span>
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="n">size</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">32</span><span class="p">,</span>
-        <span class="n">is_reg</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
-        <span class="n">is_signed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
+        <span class="n">reg</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
+        <span class="n">signed</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">size</span> <span class="o">=</span> <span class="n">size</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">is_reg</span> <span class="o">=</span> <span class="n">is_reg</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">is_signed</span> <span class="o">=</span> <span class="n">is_signed</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">reg</span> <span class="o">=</span> <span class="n">reg</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">signed</span> <span class="o">=</span> <span class="n">signed</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">name</span> <span class="o">=</span> <span class="n">name</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
@@ -458,11 +459,11 @@
 <span class="sd">        To Verilog lines</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">string</span> <span class="o">=</span> <span class="s2">&quot;&quot;</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_reg</span><span class="p">:</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">reg</span><span class="p">:</span>
             <span class="n">string</span> <span class="o">+=</span> <span class="s2">&quot;reg&quot;</span>
         <span class="k">else</span><span class="p">:</span>
             <span class="n">string</span> <span class="o">+=</span> <span class="s2">&quot;wire&quot;</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">is_signed</span><span class="p">:</span>
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">signed</span><span class="p">:</span>
             <span class="n">string</span> <span class="o">+=</span> <span class="s2">&quot; signed&quot;</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">size</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">:</span>
             <span class="n">string</span> <span class="o">+=</span> <span class="sa">f</span><span class="s2">&quot; [</span><span class="si">{</span><span class="bp">self</span><span class="o">.</span><span class="n">size</span><span class="o">-</span><span class="mi">1</span><span class="si">}</span><span class="s2">:0]&quot;</span>
@@ -566,9 +567,9 @@
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">condition</span> <span class="o">=</span> <span class="n">assert_type</span><span class="p">(</span><span class="n">condition</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">then_body</span> <span class="o">=</span> <span class="n">assert_list_type</span><span class="p">(</span><span class="n">then_body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
-        <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span> <span class="o">=</span> <span class="n">assert_list_type</span><span class="p">(</span><span class="n">else_body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">condition</span> <span class="o">=</span> <span class="n">get_typed</span><span class="p">(</span><span class="n">condition</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">then_body</span> <span class="o">=</span> <span class="n">get_typed_list</span><span class="p">(</span><span class="n">then_body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">else_body</span> <span class="o">=</span> <span class="n">get_typed_list</span><span class="p">(</span><span class="n">else_body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
 
 <div class="viewcode-block" id="IfElse.to_lines">
 <a class="viewcode-back" href="../../../../python2verilog.backend.verilog.html#python2verilog.backend.verilog.ast.IfElse.to_lines">[docs]</a>
@@ -607,7 +608,7 @@
         <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">condition</span><span class="p">,</span> <span class="n">ir</span><span class="o">.</span><span class="n">Expression</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">condition</span> <span class="o">=</span> <span class="n">condition</span>
         <span class="k">if</span> <span class="n">body</span><span class="p">:</span>
-            <span class="n">assert_list_type</span><span class="p">(</span><span class="n">body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
+            <span class="n">get_typed_list</span><span class="p">(</span><span class="n">body</span><span class="p">,</span> <span class="n">Statement</span><span class="p">)</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">body</span> <span class="o">=</span> <span class="n">body</span>
         <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__init__</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="o">**</span><span class="n">kwargs</span><span class="p">)</span>
 
@@ -679,7 +680,7 @@
       &copy;2023, Kerry Wang.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.3</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 7.2.4</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.13</a>
       
     </div>
